WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311997
REGRESSION (
308212@main
): hp.com: HP Financing logo overlaps with text
https://bugs.webkit.org/show_bug.cgi?id=311997
Summary
REGRESSION (308212@main): hp.com: HP Financing logo overlaps with text
Ahmad Saleem
Reported
2026-04-10 20:45:22 PDT
Hi Team, While going through reddit, I stumbled upon link to HP laptop and noticed bug, so reporting now. Link -
https://www.hp.com/us-en/shop/pdp/hp-omnibook-ultra-laptop-next-gen-ai-14-kg000-14-c92svav-1
*** Steps to Reproduce *** 1. Open URL 2. Just below Price, look at HP Financing Logo and text next to it. *** Actual Result *** Overlapping bit *** Expected Result *** Should not reset. *** Regression Info *** Does not reproduce on Safari 26.4 but does reproduce on STP241. Just raising so we can track and fix it. Thanks!
Attachments
Reference Screenshot
(842.55 KB, image/png)
2026-04-10 20:46 PDT
,
Ahmad Saleem
no flags
Details
Test reduction
(9.06 KB, text/html)
2026-04-11 05:42 PDT
,
alan
no flags
Details
[fast-cq]Patch
(8.13 KB, patch)
2026-04-11 07:56 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2026-04-10 20:46:42 PDT
Created
attachment 479012
[details]
Reference Screenshot
Radar WebKit Bug Importer
Comment 2
2026-04-10 20:51:52 PDT
<
rdar://problem/174541785
>
alan
Comment 3
2026-04-11 05:42:09 PDT
Created
attachment 479015
[details]
Test reduction
alan
Comment 4
2026-04-11 07:56:00 PDT
Created
attachment 479016
[details]
[fast-cq]Patch
Ahmad Saleem
Comment 5
2026-04-11 12:21:49 PDT
Ops! Sorry for causing this. Thanks @Alan for taking this. Appreciate it.
EWS
Comment 6
2026-04-13 05:27:29 PDT
Committed
311081@main
(f050bddbffd1): <
https://commits.webkit.org/311081@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479016
[details]
.
Sammy Gill
Comment 7
2026-04-22 15:22:25 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59427
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug