REGRESSION (308212@main) hp.com: HP Financing logo overlaps with text https://bugs.webkit.org/show_bug.cgi?id=311997 <rdar://problem/174541785>

Reviewed by Antti Koivisto.

A replaced element with no intrinsic width/height, just an
aspect ratio and min-height inside flex has its parent flex item sized to 0px (main axis).
The replaced element renders at the correct size (91x30 in this case)
but overflows its parent flex item (sized to 0px), causing sibling text to overlap.

The fix: when computing preferred width for such replaced element,
use the transferred min/max width from min-height/max-height via the aspect ratio instead of hardcoding 0.

* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/replaced-element-transferred-size-flex-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/replaced-element-transferred-size-flex.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/support/ratio-2-1.svg: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-sizing/support/ratio-3-1.svg: Added.
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeReplacedLogicalWidth const):
    In the preferred-width path for replaced elements with no intrinsic
    dimensions, compute transferred min/max from the opposite axis via
    aspect ratio instead of returning 0.

Canonical link: https://commits.webkit.org/311081@main